--- a/parallex-effect/index.html
+++ b/parallex-effect/index.html
@@ -11,7 +11,7 @@
       <img src="background.jpg" alt="background" class="mountain"/>
       <img src="tree.png" alt="tree" class="tree1"/>
       <img src="tree.png" alt="tree" class="tree2"/>
-      <p>this is a paragraph</p>
+      <p>Hi! <br> Welcome to the mountains. Scroll to see a cool effect</p>
     </div>
   </body>
 </html>
