hover effect changed

--- a/3d-card-hover/index.html
+++ b/3d-card-hover/index.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
+    <script src="index.js" defer></script>
     <title>3d hover effect</title>
   </head>
   <body>
     <div class="card">
-      <h1>3D Hover Effect</h1>
-      <p>hover on this card to see a cool 3d effect</p>
-      <span
-        >Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore earum
-        beatae, quia nam repellendus sed odio sit deserunt, assumenda corporis
-        explicabo excepturi facilis a, corrupti id commodi dolorum? Dicta,
-        qui.</span
-      >
+      <div class="content-layer">
+        <h1>3D Hover Effect</h1>
+        <p>hover on this card to see a cool 3d effect</p>
+        <span
+          >Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore earum
+          beatae, quia nam repellendus sed odio sit deserunt, assumenda corporis
+          explicabo excepturi facilis a, corrupti id commodi dolorum? Dicta,
+          qui.</span
+        >
+      </div>
     </div>
   </body>
 </html>
